2006/12/16
.updated CDvCodedText support regarding query