@@ -1,0 +1,67 @@
+archetype 	
+	adl-test-ENTRY.test.draft
+concept 
+	[at0000]	--  basic data types test 1
+
+definition
+	ENTRY[at0000] matches {	
+        types matches {
+            LIST[at0001] matches {
+                items cardinality matches {0..*} matches {
+                    ELEMENT[at1001] matches {	-- duration
+                		value matches {PT0s}
+                	}
+                	ELEMENT[at1002] matches {	-- duration
+                		value matches {P1d}
+                	}
+                	ELEMENT[at1003] matches {	-- duration
+                		value matches {PT2h5m0s}
+                	}
+                	ELEMENT[at1004] matches {	-- duration
+                		value matches {|PT1h55m0s..PT2h5m0s|}
+                	}
+                	ELEMENT[at1005] matches {	-- duration
+                		value matches {|<=PT1h|}
+                	}
+					
+					-- duration7 matches {PT30s, PT45s, PT1m0s, PT2m0s} -- Not currently in ADL syntax
+                	-- duration8 matches {|P1d +/PT4h|}
+                                	
+                	ELEMENT[at1010] matches {	-- duration with assumed values
+                		value matches {PT0s; P1d}
+                	}
+                	ELEMENT[at1011] matches {	-- duration with assumed values
+                		value matches {P1d; P1d}
+                	}
+                	ELEMENT[at1012] matches {	-- duration with assumed values
+                		value matches {PT2h5m0s; P1d}
+                	}
+                	ELEMENT[at1013] matches {	-- duration with assumed values
+                		value matches {|PT1h55m0s..PT2h5m0s|; P1d}
+                	}
+                	ELEMENT[at1014] matches {	-- duration with assumed values
+                		value matches {|<=PT1h|; P1d}
+                	}
+                }
+            }
+        }        
+    }
+ontology 
+	primary_language = <"en">
+	languages_available = <"en", ...>
+	terminologies_available = <"adl_test", ...>
+
+	term_definitions = <
+		["en"] = <
+			items = <
+				["at0000"] = <
+					text = <"test entry">; 
+					description = <"test entry">
+				>
+				["at0001"] = <
+					text = <"test list">; 
+					description = <"test list">
+				>
+			>
+		>
+	>
