@@ -1,2 +1,5 @@
 2006/12/16
 .updated CDvCodedText support regarding query
+
+2006/12/18
+.separated CDurationTest from BasicTypesTest
